--- a/css/style.css
+++ b/css/style.css
@@ -186,10 +186,10 @@ header{
     font-weight: 500;
     color: var(--white);
     position: absolute;
-    bottom: 16px;
-    left: 50px;
+    bottom: 0px;
+    left: 0px;
     padding: 5px 10px;
-    background-color:rgba(165, 136, 99, 0.599); 
+    background-color:rgba(165, 136, 99, 0.699); 
 }
 
 .portfolio-link:hover{
@@ -359,7 +359,7 @@ footer{
 
 .grid-col{
     max-width: 100%;
-    height: 100%;
+    height: 300px;
     overflow: hidden;
 }
 
