--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -7,6 +7,7 @@
 @media screen and (max-width: 1082px) {
     .button{
         padding: 12.5px 41px;
+  
     }
     .button::before{
 	height:106.6%;
@@ -44,7 +45,7 @@
 }
 @media screen and (max-width: 1000px) {
     .heading{
-        font-size: 3.4rem;
+        font-size: 2.8rem;
     }
     .banner-left {
         margin-left: 5rem;
@@ -52,11 +53,16 @@
 .header-text{
     padding: 20px;
 }
+.form-input{
+    width: 300px;
 }
-@media screen and (max-width: 1000px) {
-    .heading{
-        font-size: 2.8rem;
-    }
+.button-tutorial::before{
+    height: 108%;
+    left: 1.5%;
+    top:-18%;
+    width:102%;
+}
+
     
 }
 /* tablets- sm  */
@@ -64,7 +70,15 @@
     .reviews-text{
         font-size: 0.6rem;
     }
-    #masterclass-button{
+    .button::before{
+        height:100.6%;
+        left:2%;
+        height: 115%;
+        top: -18%
+        }
+    .button{
+        padding: 10px 33px;
+
         font-size: 0.6rem;
     }
     header{
@@ -78,7 +92,12 @@
         width: 100%;
         left:0
     }
-
+    .reviews::before{
+        height:95%
+    }
+    .reviews-right{
+        margin-top: -10%;
+    }
     .img-grid {
         width: 100%;
         height: 100%;
@@ -110,9 +129,7 @@
             justify-content: space-around;
             margin: 0;
         }
-        .button-nav{
-            margin-left: 0rem;
-        }
+       
         .lower{
             flex-direction: column;
             margin: 2rem;
